tests/import_wildcard_bad.stderr
tests/import_wildcard_bad.hop:2:21: error: HOP2022: wildcard import is not supported
