tests/import_wildcard_bad.hop
// Verifies import wildcard is rejected.
import "lib/math" { * }

fn main() {}
